--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </style>
 
 <div class="container">
-  <iframe class="responsive-iframe" src="https://www.youtube.com/embed/xvFZjo5PgG0"></iframe>
+  <iframe class="responsive-iframe" src="https://www.youtube.com/embed/xvFZjo5PgG0" mute="1" autoplay="1"></iframe>
 </div>
 
 </body>
